--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,15 @@ website:
       - blog.qmd
       - href: projects.qmd
         text: Projects
+    right:
+      - icon: github
+        href: https://github.com/shmuir
+      - icon: linkedin
+        href: https://www.linkedin.com/in/shmuir/
+      - icon: envelope
+        href: mailto:scsik@ucsb.edu
+      #- href: CV/SCsik_CV.pdf
+      #  text: cv
 
 format:
   html:
