--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,10 +14,11 @@ website:
         text: Home ## what you want it to be called in the nav bar
       - href: about.qmd ## or if not specified it will just use the doc name in the nav bar
         text: About
-      - resources.qmd
+      #- resources.qmd
+      - href: projects.qmd 
+        text: Projects
       - blog.qmd
-     # - href: projects.qmd 
-     #   text: Projects
+      
     right:
       - icon: github
         href: https://github.com/shmuir
