--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,12 +32,14 @@ website:
 
 format:
   html:
+    link-external-newwindow: true
     theme: 
       light: light_styles.scss
       #dark: dark_styles.scss
     css: styles.css
     toc: true
     page-layout: full
+    
 
 editor: source
 
