--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,8 +17,8 @@ website:
       #- resources.qmd
       - href: projects.qmd 
         text: Projects & Blog
-      # - href: data-viz.qmd
-      #   text: Data Viz
+      - href: data-viz.qmd
+        text: Data Viz
       
     right:
       - href: CV-Sam_Web.pdf
